# currency-converter

./: Cargo.toml  index.html
data/: currency_list.json
src/: lib.rs  main.rs
src/back/: back.rs  backend.rs
src/front/assets/: test.css
src/utils/: data_parser.rs
