[package]
name = "currency_converter"
version = "0.1.0"
edition = "2021"

[dependencies]
#reqwest = { version = "0.12", features = ["json"] }
#tokio-macros = "2.3.0"
#tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

yew = {version = "0.21.0", features = ["csr"]}
stylist = {version = "0.13.0", features = ["yew", "yew_integration"]}
gloo = "0.11.0"