[package]
name = "currency_converter"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-net = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

yew = {version = "0.21.0", features = ["csr"]}
stylist = {version = "0.13.0", features = ["yew", "yew_integration"]}
gloo = "0.11.0"
reqwest = { version = "0.12", features = ["json"] }
web-sys = { version = "0.3.61", features = ["console"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"