[package]
name = "currency_converter"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
yew = {version = "0.21.0", features = ["csr"]}
reqwest = { version = "0.12", features = ["json"] }
web-sys = { version = "0.3.61", features = ["console"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"